--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <body>
         <div class="container">
             <div class="header">
-                <h3><img src="icon.png" class="img">
+                <h3><img src="/images/icon.png" class="img">
                 <input type="search" class="head-search" placeholder="Search or jump to...">
                 <span class="pull">Pull requests</span><span class="pull">Issues</span><span class="pull">Marketplace </span><span class="pull">Explore</span></h3>
                 <div class="profile-symbol"><span>🔵</span>
-                    <img src="noti.png" class="noti-icon">+ ▿<img src="pi.png" class="pi-icon">
+                    <img src="/images/noti.png" class="noti-icon">+ ▿<img src="/images/pi.png" class="pi-icon">
                 </div> 
             </div>
             <div class="side-column">
                 <div class="side-pp">
-                    <img src="icon2.png" class="first-side-pp">
+                    <img src="/images/icon.png" class="first-side-pp">
                     <span>dwakel ▿</span>
                 </div>
                 <hr>
@@ -27,13 +27,13 @@
                         <button class="second-side-but">⨅ New</button>
                     </div>
                     <input type="text" class="side-search" placeholder="Find a repository..."><br>
-                    <span class="position"><img src="icon3.png">  amantinband/throw</span><br>
-                    <span class="position"><img src="icon4.png">  boame/account--service--boame</span><br>
-                    <span class="position"><img src="icon5.png">  boame/campaign--service--boame</span><br>
-                    <span class="position"><img src="icon6.png">  dwarkel/personalsite</span><br>
-                    <span class="position"><img src="icon7.png">  dwakel/dwakel</span><br>
-                    <span class="position"><img src="icon8.png">  dwakel/dalaseda</span><br>
-                    <span class="position"><img src="icon9.png">  dwakel/dsa-prep</span><br>
+                    <span class="position"><img src="/images/icon3.png">  amantinband/throw</span><br>
+                    <span class="position"><img src="/images/icon4.png">  boame/account--service--boame</span><br>
+                    <span class="position"><img src="/images/icon5.png">  boame/campaign--service--boame</span><br>
+                    <span class="position"><img src="/images/icon6.png">  dwarkel/personalsite</span><br>
+                    <span class="position"><img src="/images/icon7.png">  dwakel/dwakel</span><br>
+                    <span class="position"><img src="/images/icon8.png">  dwakel/dalaseda</span><br>
+                    <span class="position"><img src="/images/icon9.png">  dwakel/dsa-prep</span><br>
                     <p>Show more</p>
                     <hr>
                     <h3>Recent activity</h3>
@@ -41,7 +41,7 @@
                     <hr><!--find out if it's a horizontal break or a border-->
                     <h3>Your teams</h3>
                     <input type="search" class="side-search" placeholder="Find a team..."><br>
-                    <img src="icon10.png"><span>boame/backend</span>
+                    <img src="/images/icon10.png"><span>boame/backend</span>
                 </div>
             </div>
             <!-- this is where the middle column begins.-->
@@ -50,7 +50,7 @@
                     <h3>Following</h3><h4>For you</h4><button class="beta-but">Beta</button>
                 </div>
                 <div class="activity">
-                    <img src="memoji.png" class="img"><h3>EJAyama starred pyscript/pyscript</h3><p>5 hours ago</p>
+                    <img src="/images/memoji.png" class="img"><h3>EJAyama starred pyscript/pyscript</h3><p>5 hours ago</p>
                 </div>
             <!--The top section is for the picture and image above the div with border-->
                 <div class="middle-column-details">
@@ -65,7 +65,7 @@
                     </div>
                 </div><!-- should have a border around this div-->
                 <div class="activity">
-                    <img src="memoji.png" class="img"><h3>EJAyama starred pyscript/pyscript</h3><p>5 hours ago</p>
+                    <img src="/images/memoji.png" class="img"><h3>EJAyama starred pyscript/pyscript</h3><p>5 hours ago</p>
                 </div>
             <!--The top section is for the picture and image above the div with border-->
                 <div class="middle-column-details">
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="activity">
-                    <img src="memoji2.jpg" class="img"><h3>RbkGh starred nukturnal/huawei-3g-unlock</h3><p>2 days ago</p>
+                    <img src="/images/memoji2.jpg" class="img"><h3>RbkGh starred nukturnal/huawei-3g-unlock</h3><p>2 days ago</p>
                 </div>
             <!--The top section is for the picture and image above the div with border-->
                 <div class="middle-column-details">
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div class="activity">
-                    <img src="memoji2.jpg" class="img"><h3>RbkGh starred nukturnal/huawei-3g-unlock</h3><p>2 days ago</p>
+                    <img src="/images/memoji2.jpg" class="img"><h3>RbkGh starred nukturnal/huawei-3g-unlock</h3><p>2 days ago</p>
                 </div>
             <!--The top section is for the picture and image above the div with border-->
                 <div class="middle-column-details">
@@ -114,7 +114,7 @@
             <div class="right-column">
                 <div class="top-container">
                     <div class="github-thing">
-                        <img src="gitlogo.png" class="github-icon2"><span>x</span>
+                        <img src="/images/gitlogo.png" class="github-icon2"><span>x</span>
                     </div>
                     <div class="git-info">
                         <p>Our response to the war in Ukraine</p><br>
