--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <title>Github Clone</title>
         <meta charset="UTF-8">
         <link href="style.css" rel="stylesheet">
+        <link rel="shortcut icon" href="/Images/icon.png" type="image/x-icon">
     </head>
-    <body>
+    <body><!--header part of the page starts here.-->
         <div class="container">
             <div class="header">
                 <h3><img src="/images/icon.png" class="img">
@@ -17,7 +18,7 @@
             </div>
             <div class="side-column">
                 <div class="side-pp">
-                    <img src="/images/icon.png" class="first-side-pp">
+                    <img src="/images/icon2.png" class="first-side-pp">
                     <span>dwakel ▿</span>
                 </div>
                 <hr>
@@ -26,7 +27,9 @@
                         <h3>Recent Repositories</h3>
                         <button class="second-side-but">⨅ New</button>
                     </div>
-                    <input type="text" class="side-search" placeholder="Find a repository..."><br>
+                    <form action="">
+                        <input type="text" class="side-search" placeholder="Find a repository..."><br>
+                    </form>
                     <span class="position"><img src="/images/icon3.png">  amantinband/throw</span><br>
                     <span class="position"><img src="/images/icon4.png">  boame/account--service--boame</span><br>
                     <span class="position"><img src="/images/icon5.png">  boame/campaign--service--boame</span><br>
@@ -40,7 +43,10 @@
                     <p>When you take actions across GitHub, we'll provide links to that activity here.</p>
                     <hr><!--find out if it's a horizontal break or a border-->
                     <h3>Your teams</h3>
-                    <input type="search" class="side-search" placeholder="Find a team..."><br>
+                    <form action="">
+                        <input type="search" class="side-search" placeholder="Find a team...">
+                    </form>
+                    <br>
                     <img src="/images/icon10.png"><span>boame/backend</span>
                 </div>
             </div>
@@ -122,6 +128,7 @@
                         <a href="#">Read more</a>
                     </div>
                 </div>
+                <h3>Latest changes</h3>
                 <div class="center"><span class="dot">●</span>
                     <div class="changes">
                         <p>5 days ago</p>
